# FSOFT2023_1DB_2

./: CMakeLis_OutraForma.txt  InformacoesAtributos_FuncionariosProdutosFornecedor.txt  PROJETO_VersãoFinal.rar  README.md
FSOFT_Projeto/: CMakeLists.txt  main.cpp
FSOFT_Projeto/headers/: Armazem.h  Contabilidade.h  Fornecedor.h  Funcionario.h  Monitor.h  PlacaGrafica.h  PlacaMae.h  Produto.h  Rato.h  Teclado.h
FSOFT_Projeto/headers/model/: Product.h
FSOFT_Projeto/sources/: Funcionario.cpp  Monitor.cpp  PlacaGrafica.cpp  PlacaMae.cpp  Produto.cpp  Rato.cpp  Teclado.cpp  main.cpp
FSOFT_Projeto/sources/model/: AccountingRecord.cpp  Product.cpp  Supplier.cpp  Transaction.cpp
PROJETO_3MOSQUETEIROS/: CMakeLists.txt
PROJETO_3MOSQUETEIROS/headers/controller/: AccountingController.h  EmployeeController.h  SupplierController.h  WarehouseController.h
PROJETO_3MOSQUETEIROS/headers/exception/: InvalidOptionException.h
PROJETO_3MOSQUETEIROS/headers/model/: AccountingRecord.h  Employee.h  Product.h  PurchaseRecord.h  Supplier.h  Transaction.h
PROJETO_3MOSQUETEIROS/headers/view/: AccountingView.h  EmployeeView.h  Menu.h  SupplierView.h  View.h  WarehouseView.h
PROJETO_3MOSQUETEIROS/sources/: main.cpp
PROJETO_3MOSQUETEIROS/sources/controller/: AccountingController.cpp  EmployeeController.cpp  SupplierController.cpp  WarehouseController.cpp
PROJETO_3MOSQUETEIROS/sources/exception/: InvalidOptionException.cpp
PROJETO_3MOSQUETEIROS/sources/model/: AccountingRecord.cpp  Employee.cpp  Product.cpp  PurchaseRecord.cpp  Supplier.cpp
(+5 files in other folders)
